<resources>
    <string name="map_api">AIzaSyCMYGuL0GWPZM-9_SdZcVqgJayUDStPHhU</string>
    <string name="app_name">KuyTravel</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Masuk</string>
    <string name="register">Daftar</string>
    <string name="lupa_passowrd">Lupa Passowrd?</string>
    <string name="buat_akun">Buat akun</string>
    <string name="nama">Nama Lengkap</string>
    <string name="masuk_akun">Masuk akun</string>
    <string name="reset_password">Reset Password</string>

    <string name="text_forgot_password">Forgot password?</string>
    <string name="text_signin_message">Hello, sign in to your account</string>
    <string name="text_signin_social_media">Or Sign in using social media</string>
    <string name="text_signup_social_media">Or Sign up using social media</string>
    <string name="text_signin_signup">Don\'t have an account? <b>Sign up</b></string>
    <string name="text_signup_terms">By signing up, you agree to our <b>terms and conditions</b></string>
    <string name="text_signup_message">Hello, let\'s set up your account</string>

    <string name="text_forgot_password_title">Lupa password? Jangan kawatir</string>
    <string name="text_forgot_password_message">Kita akan kirim link reset password kamu</string>
    <string name="forgot_password">Lupa Password</string>
    <string name="please_wait">Tunggu sebentar.</string>
    <string name="tambah">Tambah</string>
    <string name="permission_message">Please, Accept the permisiion</string>
    <string name="title_activity_maps">Map</string>
    <string name="informasi">Informasi</string>
    <string name="lorem_ipsum">lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et.</string>
    <string name="zero">0</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="book_now">Pesan Sekarang</string>
    <string name="per_night">/per malam</string>
    <string name="detail">Detail</string>
    <string name="exit">Keluar</string>
    <string name="about">Tentang aplikasi</string>
    <string name="edit">Edit profile</string>
    <string name="lokasi">Lokasi</string>
    <string name="detail_tiket">Detail Tiket</string>
    <string name="id_booking">ID Booking</string>
    <string name="nama_hotel">Nama Hotel</string>
    <string name="status_pesanan">Status pesanan</string>
    <string name="tanggal">Tanggal</string>
    <string name="pukul">Pukul</string>
    <string name="catatan">Catatan</string>
    <string name="total">Total</string>
    <string name="ubah_status_pesanan">Ubah status pesanan</string>
    <string name="simpan">Simpan</string>
    <string name="per_orang">per orang</string>
    <string name="harga">Harga</string>
    <string name="star">Bintang</string>
    <string name="hotel">Hotel</string>
    <string name="kategori">Kategori</string>
</resources>
