<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.postTravel.PostTravelDetailBookingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/detail_tiket"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/id_booking"
                            android:textColor="@color/grey_white"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tv_id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="4dp"
                            android:textSize="14sp"
                            tools:ignore="LabelFor"
                            tools:text="K2101" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat"
                            android:text="Nama"
                            android:textColor="@color/grey_white"
                            android:textSize="14sp" />
                        <TextView
                            android:id="@+id/tv_nama_traveler"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:textSize="14sp"
                            tools:ignore="LabelFor"
                            tools:text="Afif Nor Yusuf" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat"
                            android:text="Tempat Wisata"
                            android:textColor="@color/grey_white"
                            android:textSize="14sp" />
                        <TextView
                            android:id="@+id/tv_nama_travel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:textSize="14sp"
                            tools:ignore="LabelFor"
                            tools:text="Hotel Barokah" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/status_pesanan"
                            android:textColor="@color/grey_white"
                            android:textSize="14sp" />
                        <TextView
                            android:id="@+id/tv_proses"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:textSize="14sp"
                            tools:ignore="LabelFor"
                            tools:text="Approve" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/tanggal"
                            android:textColor="@color/grey_white"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tv_tanggal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="4dp"
                            android:textSize="14sp"
                            tools:ignore="LabelFor"
                            tools:text="18-20-2020" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="vertical">

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/catatan"
                            android:textColor="@color/grey_white"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tv_notes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="top"
                            android:justificationMode="inter_word"
                            android:maxLength="240"
                            android:paddingBottom="8dp"
                            android:textSize="14sp"
                            tools:ignore="UnusedAttribute"
                            tools:text="@tools:sample/lorem/random" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/total"
                        android:textColor="@color/grey_white" />

                    <TextView
                        android:id="@+id/tv_detail_harga_total"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp"
                        tools:text="IDR 20000" />

                    <ImageView
                        android:id="@+id/imgQr"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:scaleType="fitXY"
                        tools:ignore="ContentDescription" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true"
                android:visibility="visible"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/ubah_status_pesanan"
                        android:textColor="@color/grey_white" />

                    <AutoCompleteTextView
                        android:id="@+id/edt_pesanan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:textColor="@color/grey_white"
                        android:textSize="16sp"
                        tools:text="Complete" />

                    <LinearLayout
                        android:layout_marginTop="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/btnDelete"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="10dp"
                            android:layout_weight=".8"
                            android:background="@drawable/bg_button_booking"
                            android:src="@drawable/ic_delete" />

                        <Button
                            android:id="@+id/btnSimpan"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight=".2"
                            android:background="@drawable/bg_button_booking"
                            android:text="@string/simpan"
                            android:textAllCaps="false"
                            android:textColor="@color/white" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>